tdf#105044 match empty cells on "<> not-empty" comparisons

this affects any formula using <> over a range of cells
(not only SUMIF and SUMIFS)

Change-Id: I85a3c3762d72de3250def0f037a0afd96c48f35d